@@ -5,16 +5,18 @@ Description: Add Kubuntu XML feeds to Akregrator defaults
 Author: Harald Sitter <sitter@kde.org>
 Origin: vendor
 Forwarded: not
-Last-Update: 2015-09-02
+Last-Update: 2016-03-10
 ---
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 Index: kdepim/akregator/src/akregator_part.cpp
 ===================================================================
 --- kdepim.orig/akregator/src/akregator_part.cpp	2016-01-28 12:33:08.020348052 +0100
 +++ kdepim/akregator/src/akregator_part.cpp	2016-01-28 12:35:58.805455214 +0100
-@@ -189,6 +189,30 @@
-     dtimes.setAttribute(QStringLiteral("xmlUrl"), QStringLiteral("http://www.debian.org/News/news"));
-     debianFolder.appendChild(dtimes);
+@@ -174,6 +174,30 @@
+    QDomElement spanishKde = doc.createElement(QStringLiteral("outline"));
+    spanishKde.setAttribute(QStringLiteral("text"), i18n("Planet KDE España"));
+    spanishKde.setAttribute(QStringLiteral("xmlUrl"), QStringLiteral("http://planet.kde-espana.org/atom.xml"));
+    spanishFolder.appendChild(spanishKde);
  
 +    QDomElement kubuntuFolder = doc.createElement(QStringLiteral("outline"));
 +    kubuntuFolder.setAttribute(QStringLiteral("text"), QStringLiteral("Kubuntu"));
