@@ -1,6 +1,7 @@
 kdepim (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream bugfix release
+  * Attempt to fix fuzz in kubuntu_debianize_akregator_feed 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 21:16:17 -0800
 
